Добавить публикацию Docker-образов в GHCR и разделить конфиги
- Настроен GitHub Actions workflow для автосборки и пуша в GHCR при релизе.
- docker-compose.yml переведен на использование готового образа по умолчанию.
- Добавлен docker-compose-dev.yml для локальной сборки (для разработчиков).
- Обновлены инструкции в README.md, CHANGELOG.md и CONTEXT.md.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,6 +1,6 @@
 services:
   backup:
-    image: ghcr.io/strannick-ru/article-backup:latest
+    build: .
     environment:
       - BACKUP_OUTPUT_DIR=/app/backup
     volumes:
